# mox-to-dataframe

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_usage.py
mox_reader/: __init__.py  parser.py
